--- a/css/about.css
+++ b/css/about.css
@@ -381,7 +381,7 @@ h3.sec-title-gallery {
   padding: 45px 30px;
   width: 200px;
   height: 230px;
-  color: #f3f4f5;
+  color: #f3f4f5 !important;
   font-weight: 500;
   cursor: pointer;
   flex: 1;
@@ -407,6 +407,7 @@ h3.sec-title-gallery {
   border-radius: 0 20px 20px 0px;
 }
 .grid-item i {
+  color: #fff !important;
   font-size: 54px;
   transition: all 0.3s ease;
 }
@@ -416,9 +417,62 @@ h3.sec-title-gallery {
   text-align: center;
   font-family: "Roboto", sans-serif;
 }
+@-webkit-keyframes flip-diagonal-2-bck {
+  0% {
+    -webkit-transform: translateZ(0) rotate3d(-1, 1, 0, 0deg);
+    transform: translateZ(0) rotate3d(-1, 1, 0, 0deg);
+  }
+  100% {
+    -webkit-transform: translateZ(-260px) rotate3d(-1, 1, 0, -180deg);
+    transform: translateZ(-260px) rotate3d(-1, 1, 0, -180deg);
+  }
+}
+@-webkit-keyframes rotate-diagonal-1 {
+  0% {
+    -webkit-transform: rotate3d(1, 1, 0, 0deg);
+    transform: rotate3d(1, 1, 0, 0deg);
+  }
+  50% {
+    -webkit-transform: rotate3d(1, 1, 0, -180deg);
+    transform: rotate3d(1, 1, 0, -180deg);
+  }
+  100% {
+    -webkit-transform: rotate3d(1, 1, 0, -360deg);
+    transform: rotate3d(1, 1, 0, -360deg);
+  }
+}
+@-webkit-keyframes rotate-diagonal-1 {
+  0% {
+    -webkit-transform: rotate3d(1, 1, 0, 0deg);
+    transform: rotate3d(1, 1, 0, 0deg);
+  }
+  50% {
+    -webkit-transform: rotate3d(1, 1, 0, -180deg);
+    transform: rotate3d(1, 1, 0, -180deg);
+  }
+  100% {
+    -webkit-transform: rotate3d(1, 1, 0, -360deg);
+    transform: rotate3d(1, 1, 0, -360deg);
+  }
+}
+@keyframes rotate-diagonal-1 {
+  0% {
+    -webkit-transform: rotate3d(1, 1, 0, 0deg);
+    transform: rotate3d(1, 1, 0, 0deg);
+  }
+  50% {
+    -webkit-transform: rotate3d(1, 1, 0, -180deg);
+    transform: rotate3d(1, 1, 0, -180deg);
+  }
+  100% {
+    -webkit-transform: rotate3d(1, 1, 0, -360deg);
+    transform: rotate3d(1, 1, 0, -360deg);
+  }
+}
+
 .grid-item:hover i {
-  transform: rotateX(50deg) scale(1.2);
-  animation: FadeIn 0.9s linear;
+  -webkit-animation: rotate-diagonal-1 0.4s linear both;
+  animation: rotate-diagonal-1 0.4s linear both;
 }
 .testimonials-sect {
   width: 100%;
@@ -442,8 +496,14 @@ h3.sec-title-gallery {
 .client-card {
   position: relative;
   display: flex;
+  justify-content: space-between;
+  flex: 1;
+  height: 400px;
+  background-color: #fff;
   flex-direction: column;
   max-width: 370px;
+  border-radius: 45px;
+  box-shadow: 2px 7px 50px rgba(0, 0, 0, 0.3);
 }
 .upper-part {
   padding: 0 30px 30px;
@@ -452,7 +512,8 @@ h3.sec-title-gallery {
   background-color: #fff;
 }
 .upper-part .quote-text {
-  font-size: 24px;
+  font-size: 18px;
+  text-align: justify;
   font-family: "Roboto", sans-serif;
   margin: 20px 0 0;
 }
