--- a/css/about.css
+++ b/css/about.css
@@ -417,7 +417,7 @@ h3.sec-title-gallery {
   text-align: center;
   font-family: "Roboto", sans-serif;
 }
-@-webkit-keyframes flip-diagonal-2-bck {
+/* @-webkit-keyframes flip-diagonal-2-bck {
   0% {
     -webkit-transform: translateZ(0) rotate3d(-1, 1, 0, 0deg);
     transform: translateZ(0) rotate3d(-1, 1, 0, 0deg);
@@ -426,7 +426,7 @@ h3.sec-title-gallery {
     -webkit-transform: translateZ(-260px) rotate3d(-1, 1, 0, -180deg);
     transform: translateZ(-260px) rotate3d(-1, 1, 0, -180deg);
   }
-}
+} */
 @-webkit-keyframes rotate-diagonal-1 {
   0% {
     -webkit-transform: rotate3d(1, 1, 0, 0deg);
