--- a/css/style.css
+++ b/css/style.css
@@ -117,14 +117,13 @@ body {
 /* Dropdown menu list styling */
 
 .dropdown {
-  max-width: fit-content;
+  max-width: 500px;
 }
 .dropdown ul {
   opacity: 0;
   visibility: hidden;
   display: grid;
   background: rgba(255, 255, 255, 0.5);
-
   grid-template-columns: 1fr 1fr;
   position: absolute;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -153,7 +152,7 @@ body {
 .dropdown ul li {
   list-style: none;
   position: relative;
-  width: 220px;
+  width: 270px;
   /* padding: 10px 0 10px 0; */
   transition: all 0.3s ease;
 }
