--- a/css/careers.css
+++ b/css/careers.css
@@ -15,17 +15,20 @@
   justify-content: center;
 }
 
+
+
 .projects-done {
   width: 100%;
   padding: 100px 0 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .Projects-div {
   /* background-color: red; */
-  width: 700px;
+  width: 70%;
   margin-top: 50px;
 }
 
@@ -84,4 +87,18 @@
 }
 .Projects-list li a:hover::before {
   width: 100%;
+}
+
+@media screen and (max-width: 1248px) {
+  .project-title {
+    width: 500px;
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project-title {
+    width: 300px;
+    align-self: center;
+  }
 }
