--- a/css/style.css
+++ b/css/style.css
@@ -97,20 +97,20 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  background: linear-gradient(to bottom, #0092ff 50%, #fff 50%);
+  background: linear-gradient(to bottom, #0092ff 50%, transparent 50%);
   background-size: 100% 200%;
   background-position: 0% 100%;
   font-weight: 700;
   padding: 8px 12px;
   border-radius: 30px;
-  color: #0092ff;
+  color: #fff;
   cursor: pointer;
   transition: all 0.4s ease;
-  border: 1px solid #0092ff;
+  border: 1px solid #fff;
 }
 
 .quote-btn a:hover {
-  color: #fff;
+  color: #fff !important;
   background-position: 0% 0%;
 }
 
