--- a/css/collapse.css
+++ b/css/collapse.css
@@ -52,7 +52,7 @@
   width: 100%;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
-  letter-spacing: 0.2rem;
+  /* letter-spacing: 0.2rem; */
   font-size: 14px;
   text-decoration: none;
   border-radius: 5px;
