--- a/css/style.css
+++ b/css/style.css
@@ -1558,3 +1558,13 @@ body {
     height: 250px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .form-group input {
+    padding: 10px;
+    border-radius: 30px;
+    background: transparent;
+    color: #fff;
+    border: 2px solid #223150;
+  }
+}
