--- a/css/careers.css
+++ b/css/careers.css
@@ -28,19 +28,30 @@
 
 .Projects-div {
   /* background-color: red; */
-  width: 70%;
+  width: 100%;
+  padding: 0 12px;
+  margin: 0;
   margin-top: 50px;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
 }
 
-.Projects-list {
+.pro-col {
+  height: 100%;
+  /* width: 100%; */
   list-style: circle;
   display: flex;
+  align-self: flex-start;
   flex-direction: column;
-  justify-content: center;
+  gap: 20px;
+  justify-content: space-between;
   align-items: flex-start;
 }
 
-.Projects-list li {
+.pro-col li {
   padding: 10px 12px;
 }
 
