--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,53 @@
 
 body {
   overflow-x: hidden;
+  position: relative;
 }
+.Gotohome {
+  cursor: pointer;
+  visibility: hidden;
+  position: fixed;
+  right: 40px;
+  bottom: 100px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  z-index: 9;
+  background-color: #0092ff;
+}
+.Gotohome a {
+  color: #fff;
+  font-size: 20px;
+}
+.whatsapp-btn {
+  position: fixed;
+  display: flex;
+  right: 40px;
+  bottom: 30px;
+  justify-content: center;
+  align-items: center;
+  /* position: fixed;
+  margin-top: 850px;
+  margin-left: 1820px;
+  float: right; */
+  width: 50px;
+  height: 50px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  background-color: #0092ff;
+  border-radius: 50%;
+  z-index: 9;
+}
+.whatsapp-btn a {
+  color: #fff;
+  font-size: 20px;
+  padding: 5px;
+}
+
 /* body {
   background-image: url("/assets/bg/pattern-1.png");
 } */
@@ -728,6 +774,10 @@ body {
   overflow: hidden;
   border-radius: 30px;
 }
+.top-hover-div img {
+  width: 350px;
+  height: 470px;
+}
 .gal-img {
   width: 100%;
   height: 100%;
@@ -789,7 +839,8 @@ body {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  gap: 50px;
+  justify-content: center;
   align-items: center;
 }
 .team-col {
@@ -805,12 +856,17 @@ body {
 }
 .member-name {
   text-decoration: none;
+  text-align: center;
   font-size: 24px;
   font-weight: 600;
   font-family: "Inter", sans-serif;
   color: #1d2c38;
 }
+.team-content h4 {
+  text-align: center;
+}
 .team-content p {
+  text-align: center;
   font-size: 14px;
   margin: 5px 0 0;
   color: #000;
@@ -883,6 +939,7 @@ body {
 .footer-title {
   font-size: 20px;
   font-family: "Inter", sans-serif;
+  text-transform: uppercase;
   font-weight: 500;
   color: #fff;
   margin: 0 0 20px;
@@ -943,8 +1000,13 @@ body {
   font-family: "Roboto", sans-serif;
   padding: 0;
 }
+.serv-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 .main-footer-list li {
   list-style: none;
+  padding-right: 20px;
   margin: 0 0 15px;
 }
 .main-footer-list li a {
@@ -987,6 +1049,7 @@ body {
 /* Contact us sectionn styling */
 
 .contact-sect {
+  padding: 100px 0 80px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -1408,7 +1471,7 @@ body {
     padding: 0 12px;
   }
   .home-owl {
-    margin-top: 50px;
+    margin-top: 100px;
   }
   .menu-list {
     display: none;
@@ -1556,6 +1619,10 @@ body {
   .iframe-container iframe {
     width: 300px !important;
     height: 250px;
+  }
+  .main-footer-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
