--- a/css/about.css
+++ b/css/about.css
@@ -365,11 +365,11 @@ h3.sec-title-gallery {
   align-items: center;
 }
 .feature-row {
-  width: fit-content;
+  margin: 0 50px;
+  width: 100%;
   background-color: #0092ff;
   display: flex;
-
-  flex-grow: 1;
+  
   flex-wrap: wrap;
   border-radius: 20px;
 }
