--- a/css/careers.css
+++ b/css/careers.css
@@ -17,7 +17,7 @@
 
 .projects-done {
   width: 100%;
-  padding: 100px 0 0;
+  padding: 100px 0 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
