--- a/css/style.css
+++ b/css/style.css
@@ -1242,11 +1242,18 @@ body {
   align-items: center;
 }
 .company-loaction .iframe-container {
-  margin-top: 60px;
-  padding: 20px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 60%;
+  padding-top: 56.25%;
 }
 .iframe-container iframe {
-  max-width: 1000px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* .service-li {
@@ -1706,14 +1713,7 @@ body {
   .contact-detail a {
     font-size: 18px;
   }
-  .iframe-container {
-    padding: 0 !important;
-    margin-top: 20px;
-  }
-  .iframe-container iframe {
-    width: 300px !important;
-    height: 250px;
-  }
+  
   .main-footer-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
