--- a/css/softwaredev.css
+++ b/css/softwaredev.css
@@ -38,6 +38,7 @@ body {
   font-weight: 700;
 }
 .content-row {
+  padding: 80px 0 50px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -253,9 +254,10 @@ ol li {
   margin-left: 20px;
   font-weight: 400;
 }
+
 @media screen and (max-width: 1385px) {
   .main-page {
-    margin-top: 100px;
+    margin-top: 0px;
   }
 }
 @media screen and (max-width: 1048px) {
