--- a/css/style.css
+++ b/css/style.css
@@ -1112,6 +1112,7 @@ body {
 }
 
 .blue-footer {
+  margin-right: 10px;
   color: #0092ff;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
