--- a/css/careers.css
+++ b/css/careers.css
@@ -1,10 +1,10 @@
 @import url("./about.css");
 
-.num::after {
+/* .num::after {
   position: absolute;
   right: 50px;
   content: "+";
-}
+} */
 
 .team-row {
   display: flex;
@@ -19,6 +19,13 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+
+.career-candidates {
+  display: grid !important;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  place-items: center;
 }
 
 .projects-done {
@@ -40,21 +47,27 @@
   flex: 1;
   justify-content: center;
   align-items: center;
-  gap: 100px;
+  /* gap: 100px; */
 }
 
 .pro-col {
+  width: 80%;
   height: 100%;
   /* width: 100%; */
+  padding: 0 20px;
   list-style: circle;
-  display: flex;
-  align-self: flex-start;
-  flex-direction: column;
+  place-content: center;
+  list-style-type: decimal;
+  list-style-position: outside;
+  font-size: 16px;
+  font-weight: 500;
+  color: #0092ff;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
-  justify-content: space-between;
-  align-items: flex-start;
 }
-.pro-col li::marker {
+/* .pro-col li::marker {
+ 
   content: "➤";
   font-size: 14px;
   color: #0092ff;
@@ -62,7 +75,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 .pro-col h2 {
   width: 100%;
   font-size: 24px;
@@ -72,7 +85,7 @@
 }
 
 .pro-col li {
-  padding: 10px 12px;
+  padding: 8px 12px;
 }
 
 .Projects-list li::marker {
@@ -95,7 +108,7 @@
   background-size: 200% 100%;
   background-position: -100%;
   display: inline-block;
-  padding: 5px 0;
+  padding: 0;
   position: relative;
   background-clip: border-box;
   -webkit-background-clip: text;
@@ -125,6 +138,14 @@
     width: 500px;
     align-self: center;
   }
+  .career-candidates {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .career-candidates {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -140,7 +161,15 @@
   }
   .pro-col {
     width: 100%;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: 1fr;
+  }
+  .career-candidates {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .career-candidates {
+    grid-template-columns: 1fr;
   }
 }
