--- a/css/contacts.css
+++ b/css/contacts.css
@@ -20,13 +20,11 @@
 }
 .adr-row {
   width: 100%;
-  display: grid;
-  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
   padding: 50px 0 0px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 1fr;
-  place-items: center;
 }
 .adr-col {
   width: 100%;
@@ -233,8 +231,8 @@
 
 @media screen and (max-width: 768px) {
   .adr-row {
-    grid-template-columns: repeat(2, 1fr);
-    place-self: center;
+    flex-direction: column;
+    gap: 40px;
   }
 }
 @media screen and (max-width: 540px) {
