--- a/css/softwaredev.css
+++ b/css/softwaredev.css
@@ -84,7 +84,7 @@ body {
 .lower-content-col {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 320px;
   border-radius: 20px;
   padding: 0 12px;
